# UdacityCppCapstone

./: .gitignore  CMakeLists.txt  README.md
src/: button.cpp  button.h  button_texture.cpp  button_texture.h  controller.cpp  controller.h  dynamic_element.cpp  dynamic_element.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h  text_label.cpp  text_label.h  typedefs.h
